name:                iterations-leak
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/iterations-leak#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable iterations-leak
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Iterations
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  ghc-options: -O2 -threaded -rtsopts "-with-rtsopts=-N2 -A64M -sstderr"
